namespace java com.sogou.bizwork.task.api.common.exception

exception ApiTException {

	1: i32 errorCode,

	2: optional string message,
}